<resources>
    <string name="app_name">PaceTracker</string>
    <string name="app_id">692719747407460</string>
    <string name="fb_post_caption">Track your workouts</string>
    <string name="fb_post_description">PaceTracker GPS sports tracker with native dailymile and Open Street Map support</string>
    <string name="noPulse">Pulse graph is only available in the pro version.\nDo you want to learn more about the Pro version?</string>
    <string name="noPulseAlarm">Pulse alarm is only available in the pro version.\nDo you want to learn more about the Pro version?</string>
    <string name="onlyInPro">Only available in the pro version</string>
    <string name="proWeather">\"PaceTracker Pro\" stores weather information for each session</string>
    <string name="proHeartRate">\"PaceTracker Pro\" shows a graph of your heart rate and supports audible pulse-alarming</string>
    <string name="proNoAds">\"PaceTracker Pro\" is free of ads</string>
    <string name="proThanks">Thank you for upgrading to the Pro version!</string>
    <string name="proAlready">Thank\'s you already upgraded to the Pro version!</string>
    <string name="proUpgrade">Upgrade</string>
	<string name="ttsErrorMessage">Failed to initialize TTS. PaceTracker will not work without Text-to-Speech.</string>
   	<string name="map">Map</string>
   	<string name="map_type">Map</string>
	<string name="base_tiles">Map</string>
	<string name="overlay_tiles">Overlay</string>
	<string name="tiles">Tiles</string>
	<string name="min_zoom">Min zoom</string>
	<string name="max_zoom">Max zoom</string>
	<string name="download_note">Note: The maximum number of tiles is limited to 2000</string>
	<string name="margin">Margin [m]</string>
	<string name="tile_download">Map download</string>
	<string name="downloading_tiles">Download map</string>
	<string name="downloading">Downloading</string>
	<string name="download_completed">Download finished</string>
	<string name="download_canceled">Download aborted</string>
 	<string name="end">End</string>
 	<string name="start">Start</string>
    <string name="baseMap">Base map</string>
    <string name="overlayMap">Overlay</string>
	<string name="close">Close</string>
	<string name="retry">Retry</string>
	<string name="abort">Abort</string>
	<string name="share">Share</string>
    <string name="dailymile">dailymile</string>
    <string name="facebook">facebook</string>
    <string name="googlePlus">Google+</string>
	<string name="lock">Lock</string>
	<string name="add">Add</string>
	<string name="filter">Filter</string>
	<string name="dmRouteImport">DailyMile Import</string>
    <string name="planMapQuest">Plan with MapQuest</string>
    <string name="downloadMap">Download map</string>
   	<string name="dmFetchingRoutes">Downloading routes...</string>
	<string name="totalRoutes">Total routes</string>
 	<string name="newRoutes">new routes</string>
 	<string name="error">Error</string>
 	<string name="noRoutesFound">No routes found. To add a route, visit dailymile.com and go to Community|Routes</string>
 	<string name="installEarth">Google Earth is not installed. Do you want to download it now from the Play Store?</string>
 	<string name="installPlus">Google+ is not installed. Do you want to download it now from the Play Store?</string>
 	<string name="loginDailymile">You\'re not logged in. Do you want to login to dailymile now?</string>
	<string name="viewEarth">Play in Google Earth</string>
    <string name="creatingTour">Creating tour</string>
    <string name="session">Session</string>
    <string name="sessions">Sessions</string>
    <string name="sessionCar">Car</string>
    <string name="sessionCycling">Cycling</string>
    <string name="sessionHiking">Hiking</string>
    <string name="sessionInline">Inline</string>
    <string name="sessionRunning">Running</string>
    <string name="sessionSailing">Sailing</string>
    <string name="sessionScooter">Scooter</string>
    <string name="kilometers">Kilometer</string>
    <string name="kilometer">Kilometer</string>
    <string name="miles">Miles</string>
    <string name="mile">Mile</string>
    <string name="nauticMiles">Nautic miles</string>
    <string name="nauticMile">Nautic mile</string>
    <string name="yards">Yards</string>
    <string name="yard">Yard</string>
    <string name="meters">Meters</string>
    <string name="meter">Meter</string>
    <string name="configureGoal">Please configure the goal</string>
    <string name="goalStandard">Standard training</string>
    <string name="goalReached">Goal reached</string>
    <string name="goalDistance">Distance</string>
    <string name="goalDistanceFinished">Finished after</string>
    <string name="configureDistance">Change distance</string>
    <string name="distanceLeft">Distance left</string>
    <string name="goalDuration">Duration</string>
    <string name="goalDurationFinished">Distance</string>
    <string name="configureDuration">Change duration</string>
    <string name="timeLeft">Time left</string>
    <string name="goalRoute">Navigation</string>
    <string name="configureRoute">Choose route</string>
    <string name="speechNavigation">Speech-Navigation (Beta)</string>
    <string name="filterType">Activity:</string>
    <string name="filterDate">When:</string>
    <string name="exportEMail">Email recipient</string>
 	<string name="historyExportSession">Exporting session&#8230;</string>
 	<string name="historyCreatingGpx">Creating GPX file&#8230;</string>
 	<string name="historyPostSession">Posting session&#8230;</string>
 	<string name="historyUploadingGpx">Uploading GPX file&#8230;</string>
 	<string name="noSessionsToDisplay">No sessions availabe</string>
	<string name="error_posting_session">Error while posting session</string>
	<string name="error_exporting_session">Error exporting session</string>
	<string name="confirm_delete_session">Do you really want to delete this session?</string>
    <string name="typeFilterAll">All activities</string>
    <string name="historyTotalDuration">Duration</string>
    <string name="historyTotalDistance">Distance</string>
    <string name="historyNumSessions">Sessions</string>
    <string name="historyMeanSpeed">Mean speed</string>
    <string name="historyMenuOpen">Open</string>
    <string name="historyMenuReplay">Replay</string>
	<string name="historyMenuPostDm">Post to Dailymile</string>
	<string name="historyMenuPostGp">Post to Google+</string>
	<string name="historyMenuPostFb">Post to Facebook</string>
	<string name="historyMenuExport">Export</string>
    <string name="historyMenuDelete">Delete</string>
    <string name="historyList">List</string>
    <string name="historyGraph">Graph</string>
    <string name="noSessions">No session finished yet</string>
    <string name="startNewSession">Start new session</string>
    <string name="startItemName">Start</string>
    <string name="endItemName">End</string>
    <string name="distanceItemName">Distance</string>
    <string name="caloriesItemName">Calories</string>
    <string name="timeItemName">Duration</string>
    <string name="descriptionItemName">Description</string>
    <string name="commentItemName">Comment</string>
    <string name="totalTimeItemName">Total duration</string>
    <string name="speedItemName">Speed</string>
    <string name="averageSpeedItemName">Mean speed</string>
    <string name="maxSpeedItemName">Max speed</string>
    <string name="averagePaceItemName">Mean pace</string>
    <string name="paceItemName">Pace</string>
    <string name="speed">Speed</string>
    <string name="elevation">Elevation</string>
    <string name="show">Show</string>
    <string name="heartRate">Pulse</string>
    <string name="meanHeartRate">Mean pulse</string>
    <string name="maxHeartRate">Maximum pulse</string>
    <string name="mean_max">Mean/Max</string>
    <string name="battery">Battery</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="oneHour">one hour</string>
    <string name="hours">hours</string>
    <string name="oneMinute">one minute</string>
    <string name="minutes">minutes</string>
    <string name="oneSecond">one second</string>
    <string name="seconds">seconds</string>
    <string name="time">Duration</string>
    <string name="distance">Distance</string>
    <string name="totalTime">Total duration</string>
    <string name="totalDistance">Total distance</string>
    <string name="lap">Lap</string>
    <string name="colPace">Pace</string>
    <string name="colTime">Time</string>
    <string name="colUp">Up</string>
    <string name="colDown">Dwn</string>
    <string name="mainMenuNewSession">New Session</string>
    <string name="mainMenuSessionHistory">Session History</string>
    <string name="mainMenuSettings">Settings</string>
    <string name="mainMenuDailyMile">dailymile</string>
    <string name="mainMenuRoutes">Routes</string>
    <string name="mainMenuAbout">About</string>
    <string name="newSessionType">Activity</string>
    <string name="newSessionDescription">Description</string>
    <string name="newSessionDescriptionSummary">e.g. NYC Marathon, Standard Training, &#8230;</string>
    <string name="newSessionGoal">Training</string>
    <string name="newSessionGoalNavigation">Navigation</string>
    <string name="newSessionChooseRoute">Choose route</string>
    <string name="newSessionSettings">Settings</string>
    <string name="newSessionSettingsAutoStart">Auto-Start</string>
    <string name="newSessionSettingsAutoStartSummary">Start as soon as you move</string>
    <string name="newSessionSettingsAutoPause">Auto-Pause</string>
    <string name="newSessionSettingsAutoPauseSummary">Pause if you don\'t move</string>
    <string name="newSessionButtonStart">Start</string>
    <string name="newSessionButtonGps">Activate GPS</string>
    <string name="newSessionButtonWaitFix">Waiting for GPS</string>
    <string name="newSessionUseSensor">Use Sensor</string>
    <string name="newSessionAlarmMinHr">Alarm min pulse</string>
    <string name="newSessionAlarmMaxHr">Alarm max pulse</string>
	<string name="editSessionComment">Comment</string>
    <string name="editSessionCommentSummary"></string>
    <string name="iFelt">I felt</string>
    <string name="manualSessionDetails">Session Details</string>
    <string name="manualSessionMiscDetails">Further Details</string>
    <string name="manualSessionStart">Start</string>
    <string name="manualSessionDuration">Duration</string>
    <string name="manualSessionDistance">Distance</string>
    <string name="globalPrefSectionVoiceFeedback">Voice feedback</string>
    <string name="globalPrefNotify">Notifications</string>
    <string name="globalPrefVolume">Volume</string>
    <string name="globalPrefWeight">Weight</string>
    <string name="globalPrefSectionUser">User</string>
    <string name="globalPrefSectionUnits">Units</string>
    <string name="globalPrefUnits">Units</string>
    <string name="globalPrefSectionSensor">Sensor</string>
    <string name="globalPrefBtPairing">Bluetooth-Pairing</string>
    <string name="globalPrefBtSensor">BT-Sensor</string>
    <string name="globalPrefBackupRestore">Backup Sessions + Routes</string>
    <string name="globalPrefAlarmNoise">Alarm sound</string>
    <string name="importSessions">Import</string>
    <string name="exportSessions">Export</string>
	<string name="workout_title">Workout Title</string>
	<string name="how_did_it_go">How did it go?</string>
	<string name="i_felt">I felt...</string>
	<string name="attach_route">Upload route</string>
    <string name="routeFromTo">Route</string>
    <string name="routeFrom">From</string>
    <string name="routeTo">To</string>
    <string name="routeSettings">Settings</string>
    <string name="routeType">Type</string>
    <string name="routeStrategy">Strategy</string>
    <string name="routeLocale">Language</string>
</resources>